crates/swc_ecma_parser/tests/test262-error-references/fail/77e5dccd799284ee.module.js.stderr
error: Unexpected token `default`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/77e5dccd799284ee.module.js:1:16
  |
1 | export default default
  |                ^^^^^^^

